# tmdb

./: Pipfile  README.md  pyproject.toml
src/tmdb/: __init__.py  base.py  movies.py  tmdb.py
src/tmdb/series/: __init__.py  seasons.py  series.py
src/tmdb/utils/: __init__.py  images.py  utils.py
